# xblocks-extra

./: .gitignore  .readthedocs.yaml  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: conf.py  index.rst
docs/how-tos/: index.rst  migrating-xblocks.rst
src/audio/: __init__.py  audio.py
src/audio/conf/locale/: config.yaml
src/audio/static/css/: audio.css
src/audio/static/js/src/: audio_edit.js
src/audio/templates/html/: audio.html  audio_edit.html
tests/: __init__.py  test_placeholder.py
