[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xblocks-extra"
version = "0.1.0"
description = "A collection of XBlocks for the Open edX platform that preserve their original package paths for drop-in replacement"
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0"
authors = [
    {name = "Open edX Project", email = "oscm@openedx.org"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
keywords = [
    "Python",
    "edx",
    "xblock",
]
dependencies = [
    "XBlock",
    "Django>=4.2",
]

[project.urls]
Homepage = "https://github.com/openedx/xblocks-extra"
Repository = "https://github.com/openedx/xblocks-extra"
Documentation = "https://xblocks-extra.readthedocs.io"

[project.optional-dependencies]
dev = [
    "build",
    "ruff",
]
test = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-django",
]

# XBlock entry points will be added here as xblocks are migrated
# Example:
# [project.entry-points."xblock.v1"]
# foo = "foo_xblock:FooXBlock"

# Packages live in src/ but are installed without the src prefix
# e.g., src/foo_xblock/ is installed as foo_xblock
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

# Ruff configuration
# https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "DJ",     # flake8-django
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = []
known-third-party = ["django", "xblock"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Pytest configuration
# https://docs.pytest.org/en/stable/reference/customize.html
[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
addopts = "-v --tb=short"

# Coverage configuration
# https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.run]
branch = true
# Source paths will be added as xblocks are migrated
# Example: source = ["foo_xblock", "bar_xblock"]
source = []
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 80
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
